Bug 80097 - FILESAVE: w:tblBorders and w:tcBorders are not preserved after exported from LO
Summary: FILESAVE: w:tblBorders and w:tcBorders are not preserved after exported from LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-16 13:52 UTC by Ravindra Vidhate
Modified: 2014-06-27 07:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original File Set 1 (60.57 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-16 13:52 UTC, Ravindra Vidhate
Details
Original File Set 2 (35.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-16 13:52 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-06-16 13:52:08 UTC
Created attachment 101173 [details]
Original File Set 1

Problem description: 
Open the attached file. The Table borders and Table Column borders
are being lost after exported as DOCX.

Steps to reproduce:
1. Open the DOCX file in LO
2. Export the DOCX file from LO 
3. Open the exported file in MS-Office.

Current behavior:
The Table borders and Table Column borders are being lost after exported as DOCX

Expected behavior:
The Table borders and Table Column borders should not lost after exported as DOCX
              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Ravindra Vidhate 2014-06-16 13:52:51 UTC
Created attachment 101174 [details]
Original File Set 2
Comment 2 Commit Notification 2014-06-27 07:08:13 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6bd609d8451c08504c47c86196c508a7022dd4b7

fdo#80097 : tblBorders and tcBorders are not preserved for the table.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.