fdo#80097 : tblBorders and tcBorders are not preserved for the table.

When we have multiple tables inside a table, the tblBorders and
tcBorders of the inside tables are not getting preserved.

The issue is m_aTableStyleConf is not clear when the LO starts
writing the properties of the inside table.

Change-Id: I30081b8a5a59614430a2279550ae7eb589cb71ec
Reviewed-on: https://gerrit.libreoffice.org/9893
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>