sw/source/filter/ww8/docxattributeoutput.cxx
@@ -2942,6 +2942,11 @@ void DocxAttributeOutput::TableDefinition( ww8::WW8TableNodeInfoInner::Pointer_t
     std::map<OUString, com::sun::star::uno::Any> aGrabBag =
             sw::util::HasItem<SfxGrabBagItem>( pTblFmt->GetAttrSet(), RES_FRMATR_GRABBAG )->GetGrabBag();
 
+    // We should clear the TableStyle map. In case of Table inside multiple tables it contains the
+    // table border style of the previous table.
+    if (! m_aTableStyleConf.empty())
+        m_aTableStyleConf.clear();
+
     // Extract properties from grab bag
     std::map<OUString, com::sun::star::uno::Any>::iterator aGrabBagElement;
     for( aGrabBagElement = aGrabBag.begin(); aGrabBagElement != aGrabBag.end(); ++aGrabBagElement )
